--- a/css/custom.css
+++ b/css/custom.css
@@ -89,30 +89,36 @@
 #gallery{
   position:relative;
   margin: 0 auto;
-  overflow:hidden;
-  width:1150px;
-  height:730px; /* +30 = space for buttons */
-  text-align:center; /* to center the buttons */
+  overflow: hidden;
+  max-width: 1150px;
+  width: 90%;
+  height: 690px; /* +30 = space for buttons */
+  text-align: center; /* to center the buttons */
 
 }
 
-#slider{
-  position:absolute;
-  left:0;
-  height:700px;  
-  text-align:center; /* to reset text inside slides */
+#slider {
+  position: absolute;
+  left: 0;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
-#slider > div {
-  position:relative;
-  float:left;
+#slider > .horizontal-section {
+  position: relative;
+  float: left;
   width: 1150px;
   height: 700px;
-  background-color: rgba(255, 255, 255, 0.9);
-
 }
 
-#prev, #next{
+#slider > .vertical-section {
+  position: inline;
+  width: 1150px;
+  height: 700px;
+}
+
+
+#prev, #next, #down, #up {
   display:inline-block;
   position:relative;
   top:600px;
