--- a/css/custom.css
+++ b/css/custom.css
@@ -161,6 +161,14 @@
     margin-top: 7%;
 }
 
+
+.research-categories {
+    background-color: #939393;
+    width: 80%;
+    height: 80px;
+    margin-bottom: 15%;
+}
+
 /* navbar */
 
 #logo {
