--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 /*home page*/
 
 #nav-home {
@@ -81,92 +86,45 @@
     transition: none;
 }
 
-
-#research-buttons {
-    text-align: center;
+#shell {
+    height: 90%;
+    margin: 1% 3% 1% 3%;
 }
-
-#research-buttons a {
-    margin-top:30px;
-}
-
-
-#personalized-button {
-    background-color: #007EE5;
-    height: 130px;
-    width: 700px;
-    line-height: 130px;
-    font-size: 25px;
-}
-
-#mmy-button {
-    background-color: #ffffff;
-    color: #007EE5;
-    height: 70px;
-    width: 300px;
-    line-height: 70px;
-    font-size: 20px;
-}
-
 
 #gallery {
-    position:relative;
-    margin: 0 auto;
-    overflow: hidden;
-    max-width: 1150px;
-    width: 90%;
-    height: 690px; /* +30 = space for buttons */
-    text-align: center; /* to center the buttons */
-
-}
-
-#slider {
-    position: absolute;
-    left: 0;
-    text-align: center;
     background-color: rgba(255, 255, 255, 0.9);
-}
-
-#slider > .horizontal-section {
-    position: relative;
+    height: 100%;
+    width: 70%;
+    overflow: hidden;
+    white-space: nowrap;
     float: left;
-    width: 1150px;
-    height: 700px;
+    border-radius: 5px;
 }
 
-#slider > .vertical-section {
-    position: inline;
-    width: 1150px;
-    height: 700px;
-}
-
-
-#prev, #up {
+.horizontal-section {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
     position: relative;
-    margin-right: 35%;
-    margin-top: 3%;
-    background-color: #007EE5;
-
-}
-
-#next, #down {
-    position: relative;
-    margin-left: 35%;
-    margin-top: 3%;
-    background-color: #007EE5;
-
-}
-
-#research-container {
-    margin-top: 7%;
 }
 
 
-.research-categories {
-    background-color: #939393;
-    width: 80%;
-    height: 80px;
-    margin-bottom: 15%;
+.vertical-section {
+    clear:left;
+    float:left;
+    display:inline-block;
+    width: 100%;
+    height: 100%;
+    position:relative;
+}
+
+#t2 {
+    width: 29%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    float: left;
+    border-radius: 5px;
+    margin-left: 1%;
 }
 
 /* navbar */
