--- a/css/custom.css
+++ b/css/custom.css
@@ -134,9 +134,9 @@ html, body {
     height:50%;
 }
 
-nav .brand-logo.center {
+nav .brand-logo {
     top: 10%;
-    left: 14.5%;
+    left: 12.5%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 }
@@ -146,4 +146,5 @@ nav ul a {
 }
 
 nav ul {
+    margin-right: 1.5%;
 }
