--- a/css/custom.css
+++ b/css/custom.css
@@ -108,6 +108,7 @@ html, body {
     position: relative;
     text-align: center;
     overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 
@@ -118,6 +119,26 @@ html, body {
     width: 100%;
     height: 100%;
     position:relative;
+}
+
+
+#personalized-button {
+    height: 150px;
+    background-color: #007EE5;
+    line-height: 150px;
+    width: 75%;
+    font-size: 25px;
+    margin: 5% 0% 5% 0%;
+}
+
+#mmy-button {
+    height: 100px;
+    color: #007EE5;
+    background-color: #ffffff;
+    line-height: 100px;
+    width: 75%;
+    font-size: 20px;
+    margin: 0% 0% 5% 0%;
 }
 
 #t2 {
