fixed home page buttons to be centered on all screen sizes

--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,9 @@ html, body {
     position: absolute;
     z-index: 2;
     top: 60%;
-    left: 33%;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 .slider.fullscreen {
