--- a/css/custom.css
+++ b/css/custom.css
@@ -271,6 +271,21 @@ th, td {
     vertical-align: middle;
 }
 
+.red-review {
+    background-color: rgba(255, 0, 0, 0.2);
+    font-weight: bold;
+}
+
+.green-review {
+    background-color: rgba(0, 255, 0, 0.2);
+    font-weight: bold;
+}
+
+.orange-review {
+    background-color: rgba(255, 255, 0, 0.2);
+    font-weight: bold;
+}
+
 thead {
     border-bottom: 0px;
     background-color: #007EE5;
