--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,8 @@
 html, body {
     height: 100%;
-    padding: 0;
-    margin: 0;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 /*home page*/
 
@@ -81,7 +82,8 @@ html, body {
 /* Research page */
 
 #research-body {
-    opacity: 1;
+    height: 100%;
+    width: 100%;
     transition: 1s opacity;
     background-image: url("../img/car-bg-4.jpg");
 }
@@ -92,14 +94,15 @@ html, body {
 }
 
 #shell {
-    height: 90%;
-    margin: 1% 3% 1% 3%;
+    height: 100%;
+    width: 100%;
+    padding: 1% 3% 3% 3%;
 }
 
 #gallery {
     background-color: rgba(255, 255, 255, 0.9);
     height: 100%;
-    width: 70%;
+    width: 67%;
     overflow: hidden;
     white-space: nowrap;
     float: left;
@@ -180,6 +183,24 @@ html, body {
     background-color: #B4E38B;
 }
 
+#sedan-button.clicked {
+    content: url('../img/car-types/Sedans-selected.png');
+}
+
+#sedan-button:hover {
+    content: url('../img/car-types/Sedans-selected.png');
+    cursor: pointer;
+}
+
+#suv-button:hover {
+    content: url('../img/car-types/SUVs-selected.png');
+    cursor: pointer;
+}
+
+#suv-button.clicked {
+    content: url('../img/car-types/SUVs-selected.png');
+}
+
 .research-categories {
 /*    background-color: #939393;
 */  
@@ -216,12 +237,13 @@ html, body {
 }
 
 #payment-sliders {
+
 }
+/*end left slider section */
 
-/*research-right hand size for car display */
-
+/*car panel section */
 #car-panel {
-    width: 29%;
+    width: 32%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.9);
     float: left;
@@ -231,20 +253,121 @@ html, body {
     overflow-y: scroll;
 }
 
-.car-row {
-    height: 12%;
-    border-bottom: 1px solid;
-    border-bottom-color: rgba(100,100,100, 0.5);
-}
-
 #car-panel-info {
-    height: 5%;
     background-color: #007EE5;
-    color: #fff;
+    color: white;
+    width: 100%;
+    text-align: center;
+    height: 30px;
+    line-height: 30px;
 }
 
-.row {
-    margin-bottom: 0px;
+/*car panel card section*/
+.car-panel-card {
+    width: 100%;
+    height: 20%;
+    min-height: 160px;
+    overflow: hidden;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: -webkit-flex;
+    display: flex;
+    margin-bottom: 1px;
+    border-bottom: 1px solid;
+    border-color: rgba(100, 100, 100, 0.5);
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.car-panel-left {
+    width: 25%;
+    display: block;
+    height: 100%;
+}
+
+.car-panel-middle {
+    width: 30%;
+    margin-right: 20px;
+    margin-left: 10px;
+    display: block;
+    height: 100%;
+    border-right: 1px solid;
+    border-color: #007EE5;
+}
+
+.car-panel-right {
+    display: block;
+    width: 45%;
+}
+
+/*car-panel-left properties*/
+.car-thumbnail {
+    max-width: 100%;
+    padding-top: 20px;    
+}
+
+.match-percent {
+    left: 30px;
+    top: -25px;
+    position: relative;
+    font-size: 1.8em;
+    color: orange;
+}
+
+.match-suffix {
+    position: relative;
+    font-size: 13px;
+    color: #007EE5; 
+    top: -15px;
+    left: 30px;
+}
+
+/*car-middle properties*/
+.car-make {
+    font-weight: bold;  
+}
+
+.car-price {
+    margin-top: -5px;
+    font-size: 0.9em;
+    color: green;
+}
+
+.car-info {
+    padding-top: 20%;
+    font-size: 13px;
+}
+
+.panel-selection {
+    margin-top: 2px;
+}
+
+/*car-right properties*/
+.blurb-suffix {
+    margin-right: 3%;
+    line-height: 1.1;
+    color: #007EE5;
+}
+
+.blurb {
+    margin-top: 5px;
+    font-size: 12px;
+    color: grey;
+}
+
+.edmunds-rating-suffix {
+    font-size: 0.9;
+    color: rgba(0, 0, 0, 0.5)
+    padding: 0;
+    margin: 0;
+    color: #007EE5;
+}
+
+.edmunds-rating {
+    font-size: 35px;
+    color: green;
+    margin-top: -5px;
+    margin-bottom: -5px;
+    padding: 0;
 }
 
 #panel-image-placeholder {
@@ -263,31 +386,6 @@ html, body {
     padding: 0% 10% 0% 10%;
 }
 
-#sedan-button.clicked {
-    content: url('../img/car-types/Sedans-selected.png');
-}
-
-#sedan-button:hover {
-    content: url('../img/car-types/Sedans-selected.png');
-    cursor: pointer;
-}
-
-#suv-button:hover {
-    content: url('../img/car-types/SUVs-selected.png');
-    cursor: pointer;
-}
-
-#suv-button.clicked {
-    content: url('../img/car-types/SUVs-selected.png');
-}
-
-th, td {
-    min-width:135px;
-    padding: 10px 0px 0px 20px;
-    border-radius: 0;
-    vertical-align: middle;
-}
-
 .red-review {
     background-color: rgba(255, 0, 0, 0.2);
     font-weight: bold;
@@ -303,21 +401,6 @@ th, td {
     font-weight: bold;
 }
 
-thead {
-    border-bottom: 0px;
-    background-color: #007EE5;
-    color: #fff;
-}
-
-#fixed-panel-width {
-    width: 150px;
-    max-width:150px;
-}
-
-#image-panel-width {
-    min-width: 100px;
-}
-
 #expand-button {
     max-height: 4%;
     cursor: pointer;
@@ -329,6 +412,8 @@ thead {
     -o-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
 }
+
+
 /* navbar */
 
 #logo {
