removing topbar on every new list generation

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,10 @@ html, body {
     margin: 0px;
     padding: 0px;
 }
+
+::-webkit-scrollbar { 
+    display: none; 
+}
 /*home page*/
 
 #nav-home {
