--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,7 @@ html, body {
     padding: 0px;
 }
 
+
 ::-webkit-scrollbar { 
     display: none; 
 }
@@ -133,6 +134,13 @@ html, body {
     position:relative;
 }
 
+.button-pics {
+    height: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 #personalized-button {
     height: 150px;
@@ -249,7 +257,7 @@ html, body {
 #car-panel {
     width: 32%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.8);
     float: left;
     border-radius: 5px;
     margin-left: 1%;
@@ -269,7 +277,6 @@ html, body {
 /*car panel card section*/
 .car-panel-card {
     width: 100%;
-    height: 20%;
     min-height: 160px;
     overflow: hidden;
     padding-top: 10px;
@@ -278,7 +285,7 @@ html, body {
     margin-bottom: 1px;
     border-bottom: 1px solid;
     border-color: rgba(100, 100, 100, 0.5);
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .car-panel-left {
@@ -300,6 +307,17 @@ html, body {
 .car-panel-right {
     display: block;
     width: 45%;
+}
+
+.car-panel-extra {
+    margin-top: -10px;
+    padding-right: 10px;
+    padding-left: 20px;
+    display: block;
+    width: 35%;
+    border-left: 1px solid;
+    border-color: #cccccc;
+    background-color: #efefef;
 }
 
 /*car-panel-left properties*/
@@ -417,6 +435,66 @@ html, body {
     -webkit-transform: rotate(180deg);
     -o-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
+}
+
+.mpg-panel {
+    visibility: hidden;
+}
+
+.comfort-panel {
+    visibility: hidden;
+}
+
+.safety-panel {
+    visibility: hidden;
+}
+
+/*panel - extended view*/
+
+
+.read-more-button {
+    height: 20px;
+    display: inline-block;
+    line-height: 20px;
+    font-size: 0.7em;
+    background-color: #88C057;
+}
+
+.edmunds-rating-suffix-expanded {
+    font-size: 0.9;
+    color: rgba(0, 0, 0, 0.5)
+    padding: 0;
+    margin-top: 10px;
+    color: #007EE5;
+    margin-bottom: 0px;
+}
+
+
+.expanded-table {
+    margin: 0px;
+    padding: 0px;
+}
+.expanded-table-data {
+    float:left;
+    padding-left: 20px;
+    font-size: 0.8em;
+}
+
+.expanded-table-text {
+    float: left;
+    font-size: 0.8em;
+}
+
+
+.car-details li {
+    list-style-type: circle;
+    font-size: 0.8em;
+    margin: 0px;
+    padding: 0px;
+}
+
+.car-details {
+    margin: 10px 0px 5px 15px;
 }
 
 
