--- a/css/custom.css
+++ b/css/custom.css
@@ -318,6 +318,7 @@ html, body {
     border-left: 1px solid;
     border-color: #cccccc;
     background-color: #efefef;
+    display: none;
 }
 
 /*car-panel-left properties*/
